Modules/_elementtree.c
@@ -840,7 +840,7 @@ element_findtext(ElementObject* self, PyObject* args)
 
             PyObject* text = element_get_text(item);
             if (text == Py_None)
-                return PyBytes_FromString("");
+                return PyUnicode_FromString("");
             Py_XINCREF(text);
             return text;
         }
